FIxed bug where the toggle button overlap with the read text

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     border: 1px solid black;
     justify-content: center;
     padding: 10px;
+    gap: 10px;
 }
 
 .form-group {
@@ -27,14 +28,17 @@
 .read {
     display: flex;
     justify-content: flex-start;
-    gap: 25px;
+    gap: 30px;
+}
+
+.switch {
     position: relative;
     display: inline-block;
     width: 60px;
     height: 34px;
 }
 
-.read input { 
+.switch input { 
   opacity: 0;
   width: 0;
   height: 0;
